--- a/templates/user.html
+++ b/templates/user.html
@@ -1,1 +1,36 @@
-<h1>Hello, {{ name }}!</h1>
+{% extends "base.html" %}
+
+{% block title %}Flasky{% endblock %}
+
+{% block navbar %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container"> 
+
+        <a class="navbar-brand" href="/">Flasky</a>
+
+        <button 
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"
+        class="navbar-toggler" 
+        data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="nav navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+{% endblock %}
+
+
+{% block content %}
+<div class="container">
+    <div class="page-header">
+        <h1>Hello, {{ name }}!</h1>
+    </div>
+</div>
+{% endblock %}
