--- a/templates/user.html
+++ b/templates/user.html
@@ -28,9 +28,10 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container mt-5">
     <div class="page-header">
         <h1>Hello, {{ name }}!</h1>
     </div>
+    <hr>
 </div>
 {% endblock %}
