--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,27 @@
         
     <body>
         {% block navbar %}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container"> 
+        
+                <a class="navbar-brand" href="/">Flasky</a>
+        
+                <button 
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler" 
+                data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        
+                
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         {% endblock %}
 
         {% block content %}
