Add mt-5 to block content
A top margin is now added to the content block,
to avoid adding that margin to all derived templates.

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
         {% endblock %}
 
         {% block content %}
+        <div class="container mt-5">
+            {% block page_content %} {% endblock %}
+        </div>
         {% endblock %}
 
         <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
