--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
             {% block title %}
             {% endblock %}
         </title>
+        
+        <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon/favicon.ico') }}" type="image/x-icon">
+        <link rel="icon" href="{{ url_for('static', filename='img/favicon/favicon.ico') }}" type="image/x-icon">
+
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     </head>
         
