--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
             {% block title %}
             {% endblock %}
         </title>
-        
+
         <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon/favicon.ico') }}" type="image/x-icon">
         <link rel="icon" href="{{ url_for('static', filename='img/favicon/favicon.ico') }}" type="image/x-icon">
 
@@ -46,6 +46,8 @@
         </div>
         {% endblock %}
 
-        <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+        {% block scripts %}
+            <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
